[build-system]
requires = [
    "setuptools>=61.0",
    "matplotlib>=3.6.2",
    "numpy>=1.23.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "fs-mapping-tools"
version = "0.0.0"
description = "A set of simple utilities for track mapping, designed for Formula Student autonomous events."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10.9"
authors = [
    {name = "Paulo Sanchez", email = "dev.szblzpaulo@gmail.com"}
]
maintainers = [
    {name = "Paulo Sanchez", email = "dev.szblzpaulo@gmail.com"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/erlete/fs-mapping-tools"
"Bug Tracker" = "https://github.com/erlete/fs-mapping-tools/issues"
